@@ -5,7 +5,9 @@ AUX openca.schema 3902 RMD160 e33c2fbd89e6915258fe328ab7e6dc4fd9b90f46 SHA1 3e67
 AUX postinstall.ru 461 RMD160 728200fb286bde4f03748b29055f8afdb0662ef6 SHA1 c8a4a4e931e690931a9dbd881e2e39fd80c5226d SHA256 d1cd8d20c5ae0c89aeff2b7b1ab3046d9611c3d763a53b021bce145210ddf6d2
 DIST openca-base-1.0.2.tar.gz 9267407 RMD160 7b1094541ec63ffef012f976e2c8111d6303afdf SHA1 8a2d49b676c75961c6ec03faf05cab1dd44ac561 SHA256 976c28e38b027a5ccaa48fd398c8e2b12e993ae9e84efbbb3cdad084c7c80921
 DIST openca-base-1.1.0.tar.gz 8075152 RMD160 840a3f5ab86bb409089c57e5c1c2878a2bc1e4d8 SHA1 9263f90bba9c10b5f0934c26df539e3cd0af98d1 SHA256 2bf47cb06ce74983544acdb546beeef4bb1b00dfd8a734a1e3254b5c4a80fbe4
+DIST openca-base-1.1.1.tar.gz 8083726 RMD160 9815148cac429cb26967dda60eb5bddc2b91b973 SHA1 7a4dbbc61eb632a8d0bcc26072ec84ab8c89d476 SHA256 66e901c7621deb378569a3bf9594bd46e8fc9c11a84d080e912a62afc14c02f8
 EBUILD openca-base-1.0.2.ebuild 6236 RMD160 47b1ef453198e33ac3769f514dc643b4ce7f5e67 SHA1 091255b4fa508ac390fd597c0aeee93a0a725d7e SHA256 818e6e7513d82b882065db1463d9f21d89302f6ad44b9b446629b950c5912f8e
 EBUILD openca-base-1.1.0.ebuild 4406 RMD160 1cd67dc53a87f541c326c905c8553e8436bcf523 SHA1 7ce2cbc348e43cac201fd696294347d98542c525 SHA256 d9a1900104c47c01ed4ce85f77e9293d4904887b5d584105929738707cb40a00
-MISC ChangeLog 770 RMD160 52d54f9fbc875fd174c0b2f391681ba105b2f3cd SHA1 e2bfbbe314f21fd3929ebeafb3f4ee6ad0987872 SHA256 b47332946092e7e45fd3359c5e656441836008710093acdf1fda6c75f3adac57
-MISC metadata.xml 536 RMD160 4d02e8b8600f046f52215ce8f5e37554eb3bac1c SHA1 bccb359434f7f8bd36eeb9dab5ed106e7aa0fd55 SHA256 c929668da32098cd71614bbb99b890d566c6b6bf383a842873d9bd0ee060554a
+EBUILD openca-base-1.1.1.ebuild 4406 RMD160 1cd67dc53a87f541c326c905c8553e8436bcf523 SHA1 7ce2cbc348e43cac201fd696294347d98542c525 SHA256 d9a1900104c47c01ed4ce85f77e9293d4904887b5d584105929738707cb40a00
+MISC ChangeLog 860 RMD160 c453ece36caf221691888e70b785e7cdf23a18a1 SHA1 53a4245ba8bfb87ce77e2035df531b3efdb22d92 SHA256 bd92f60ecc202ce8cde80628f79bf197e3848048aef8478784d21845001c50ce
+MISC metadata.xml 404 RMD160 fcf719ad30b4e120befe10a8626f965141d1476b SHA1 0b51727c6d1854ade0a46bcd739ebf6af0836321 SHA256 0507f677a26a26f446e82a5f2f288e3e81ba2b81a7acb1a8680a319648ab9f74
