@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +openca-base-1.1.1.ebuild:
+  bump
+
 *openca-base-1.1.0 ( 04 Aug 2010 )
   04 Aug 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   +openca-base-1.1.0.ebuild, +files/gentoofu_configure.in.patch:
